# SydneyEngine

./: CMakeLists.txt  CMakePresets.json  README.md  TODO_IMPORTANT.txt  main.cpp
include/: asset_manager.hpp  buffer_containers.hpp  engine.hpp  file_reader.hpp  file_watcher.hpp  hash_model.hpp  input_format.hpp  pipeline_builder.hpp  platform_glfw.hpp  scene.hpp  shader_compiler.hpp  shared_definitions.hpp  vertex_def.hpp  vk_barrier.hpp  vk_context.hpp  vk_del_queue.hpp  vk_mmu.hpp  vk_renderer.hpp  vk_shader.hpp  vk_stack.hpp  vkutils.hpp
src/: vkutils.cpp
src/Engine/: game.cpp  run.cpp  stuff.cpp
src/System/: window.cpp
src/asset/: asset_manager.cpp
src/implementLib/: stb_image_implem.cpp  tinygltf_implem.cpp
src/platform/: window.cpp
src/shaders/: phong.frag  phong.vert
src/vk_stack/: initVulkan.cpp  stackTools.cpp  vkutils.cpp
src/vk_stack/vk_pipelines/: init_pipeline.cpp  pipeline_builder.cpp  pipelines.cpp
src/vk_stack/vk_renderer/: render.cpp  swapchain.cpp
src/vk_stack/vk_res/: buffer.cpp  descriptor.cpp  image.cpp  swapchain.cpp
